@@ -1,9 +1,13 @@
-package com.problem_solving.drawing.models;
+package com.problem_solving.drawing.interfaces.validators.rule;
 
-import java.util.Arrays;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 
+import com.problem_solving.drawing.interfaces.validators.rule.GeneralCommandRule;
+import com.problem_solving.drawing.interfaces.validators.rule.LineCommandRule;
+import com.problem_solving.drawing.interfaces.validators.rule.Rule;
+import com.problem_solving.drawing.interfaces.validators.rule.ValidationRule;
 import com.problem_solving.drawing.service.BucketFillPlotter;
 import com.problem_solving.drawing.service.CanvasPlotter;
 import com.problem_solving.drawing.service.HorizontalLinePlotter;
@@ -17,55 +21,56 @@ public final class Command {
     public static final char R = 'R';
     public static final char B = 'B';
     public static final char Q = 'Q';
-    public static final Map<Character, Rule> VALID_COMMANDS = new HashMap<>(0);
+
+    public static final Map<Character, Rule> VALID_COMMANDS = new HashMap<>(5, 1.0f);
 
     static {
         VALID_COMMANDS.put(C, new GeneralCommandRule
             .GeneralCommandRuleBuilder()
             .validNoOfArgs(2)
-            .withValidationRules(Arrays.asList(
+            .withValidationRules(List.of(
                 new ValidationRule(0, Integer.class),
                 new ValidationRule(1, Integer.class)))
-            .withPlotters(Arrays.asList(new CanvasPlotter()))
+            .withPlotters(List.of(new CanvasPlotter()))
             .build());
 
         VALID_COMMANDS.put(L, new LineCommandRule
             .LineCommandRuleBuilder()
             .validNoOfArgs(4)
-            .withValidationRules(Arrays.asList(
+            .withValidationRules(List.of(
                 new ValidationRule(0, Integer.class),
                 new ValidationRule(1, Integer.class),
                 new ValidationRule(2, Integer.class),
                 new ValidationRule(3, Integer.class)))
-            .withPlotters(Arrays.asList(new VerticalLinePlotter(),
-                new HorizontalLinePlotter()))
+            .withPlotters(List.of(new VerticalLinePlotter(),
+                                    new HorizontalLinePlotter()))
             .build());
 
         VALID_COMMANDS.put(R, new GeneralCommandRule
             .GeneralCommandRuleBuilder()
             .validNoOfArgs(4)
-            .withValidationRules(Arrays.asList(
+            .withValidationRules(List.of(
                 new ValidationRule(0, Integer.class),
                 new ValidationRule(1, Integer.class),
                 new ValidationRule(2, Integer.class),
                 new ValidationRule(3, Integer.class)))
-            .withPlotters(Arrays.asList(new RectanglePlotter()))
+            .withPlotters(List.of(new RectanglePlotter()))
             .build());
 
         VALID_COMMANDS.put(B, new GeneralCommandRule
             .GeneralCommandRuleBuilder()
             .validNoOfArgs(3)
-            .withValidationRules(Arrays.asList(
+            .withValidationRules(List.of(
                 new ValidationRule(0, Integer.class),
                 new ValidationRule(1, Integer.class),
                 new ValidationRule(2, Character.class)))
-            .withPlotters(Arrays.asList(new BucketFillPlotter()))
+            .withPlotters(List.of(new BucketFillPlotter()))
             .build());
 
         VALID_COMMANDS.put(Q, new GeneralCommandRule
             .GeneralCommandRuleBuilder()
             .validNoOfArgs(1)
-            .withValidationRules(Arrays.asList(new ValidationRule(0, Character.class)))
+            .withValidationRules(List.of(new ValidationRule(0, Character.class)))
             .build());
     }
 
